Fix CORS configuration for production